feat: add video volume control

--- a/Note/2. 비디오 제어.md
+++ b/Note/2. 비디오 제어.md
@@ -46,3 +46,37 @@ function toggleFullscreen() {
   }
 }
 ```
+
+### 🔶 It doesn't work on chrome
+
+MDN의 compatibility부분에서 확인 시 `implemented with the vendor prefix: webkit`이라고 적혀있으면, 해당 함수는 `webkit`(크롬)에서 동작하지 않는다는 뜻. 예를 들어, requestFullScreen은 동작하지 않음. 그러므로 webkitFullScreen으로 코드 변경하여 해결
+```javascript
+videoContainer.webkitRequestFullscreen();
+```
+
+## ✍ document.exitFullscreen();
+전체 화면 해제 ('document'라는점을 유의)
+
+## ✍ INPUT RANGE
+`step` : 이동하는 단위 (`min`부터 `max`까지 이동 가능)
+`value` : 기본값을 줄수 있음.
+```html
+// videoPlayer.js
+input(type="range", min="0", max="1" step="0.1")
+```
+
+`videoPlayer.volume`은 `mute`하더라도 값을 기억하고 있어서, `videoRange.value`의 값을 `0`으로 설정했다가 다시 `mute`를 해제할때 `videoPlayer.value`의 값을 넣어준다면 원래 값으로 볼륨을 설정할 수 있다.
+
+```javascript
+function handleVolumeClick() {
+    if (videoPlayer.muted) {
+      volumnBtn.innerHTML = '<i class="fas fa-volume-up"></i>';
+      videoPlayer.muted = false;
+      videoRange.value = videoPlayer.volume;
+    } else {
+      volumnBtn.innerHTML = '<i class="fas fa-volume-mute"></i>';
+      videoPlayer.muted = true;
+      videoRange.value = 0;
+    }
+}
+```
