feat: add video recording feature

--- a/Note/2. 비디오 제어.md
+++ b/Note/2. 비디오 제어.md
@@ -80,3 +80,174 @@ function handleVolumeClick() {
     }
 }
 ```
+
+## ✍ MediaDevices
+
+`media devices navigator md`으로 검색 가능  [문서에서 보기](https://developer.mozilla.org/ko/docs/Web/API/MediaDevices)  
+카메라, 마이크, 공유 화면 등 현재 연결된 미디어 입력 장치로의 접근 방법을 제공하는 인터페이스입니다. 다르게 말하자면, 미디어 데이터를 제공하는 모든 하드웨어로 접근할 수 있는 방법입니다.
+
+### getUserMedia(configuration object : 확인 객체)
+- (*) `getUserMedia(configurationObject)`
+  + `configuration object` : 요청할 권한을 명시한다.  
+(아래 예시에서는 audo, video 모두)
+  + 원래 문서에서는 `getUserMedia().then()`과 같은 형식으로 되어있으나, 아래와 같이 `try {} catch {}` 방식도 사용 가능  
+  + (개인적으로 try내에서 await문 여러개를 순서대로 사용하고 한번에 catch문으로 처리할 수 있다는 점에서 가시성이 높아 더 선호함)
+  + `video: {width, height}` : 보여지는 화면의 크기를 조절 가능
+- (**) `srcObject` : stream은 file이 아니라 Object이므로 src로 줄 수 없음!
+```javascript
+const getVideo = async () => {
+  try {
+    await navigator.mediaDevices.getUserMedia({
+        audio: true,
+        video: { 
+            width: 1280,
+            height: 720
+        }
+    }) // (*)
+    videoPreview.srcObject = stream; // (**)
+  } catch (err) {
+    
+  }
+}
+```
+
+```javascript
+// media를 user에서부터 얻어와서 video에 넣어야함.
+const getVideo = async () => {
+    try {
+        // await : 사용자가 media에 대한 접근을 허용해줄때까지 기다림
+        // getUserMedia(configuration object : 확인 객체)
+        const stream = await navigator.mediaDevices.getUserMedia({
+            audio: true,
+            video: {
+                width: 1280,
+                height: 720
+            }
+        })
+        console.log('getVideo', stream)
+        
+        videoPreview.srcObject = stream;
+        streamObject = stream;
+        videoPreview.muted = true;
+        videoPreview.play();
+        recordBtn.innerHTML = 'Stop Recording';
+        startRecording();
+    } catch (err) {
+        // 사용자가 허락하지 않으면
+        recordBtn.innerHTML = "😥 Can't record";
+    } finally {
+        // finally : try의 실행이 끝난 후 예외 발생 여부에 상관없이 반드시 실행된다.
+        recordBtn.removeEventListener('click', getVideo)
+    }
+}
+```
+
+## ✍ MediaRecorder
+
+media Recoding 기능 제공. 
+[문서에서 보기](https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder)
+
+```javascript
+  const videoRecorder = new MediaRecorder(streamObject);
+  videoRecorder.start();
+```
+
+`MediaRecorder`에는 `dataavailable`과 `ondataavailable`라는 두가지 이벤트가 존재하는데, 이는 항상 2가지의 상쇄시키는 이벤트가 존재하기 때문이다.
+
+```javascript
+  recordBtn.addEventListener('click', getVideo);
+  // and also this would works... 
+  recordBtn.onclick = getVideo;
+```
+
+하지만 `recordBtn.onclick = getVideo` 방식은 버튼에 **단 하나의 이벤트만**을 가질 수 있다.  
+또한 이벤트를 삭제하기 위해서는 `recordBtn.onclick = null`을 할 수 있는데, 이 방식은 모든걸 삭제시키기때문에 여러개의 이벤트를 사용하고 싶다면 `addEventListener` 방식이 더 사용에 용이하다.
+
+**해당 내용 테스트**
+```javascript
+const RecordBtn = document.getElementById('jsRecordBtn');
+// 기본 상태 : null
+console.dir(RecordBtn) // Button#jsRecordBtn > { onclick: null }
+RecordBtn.onclick = () => { console.log('첫번째 이벤트에요'); }
+console.log(RecordBtn) // <button id='jsRecordButton'>Stop Recording</button>
+console.dir(RecordBtn) // Button#jsRecordBtn > { onclick: () => console.log('안녕하세요') }
+RecordBtn.onclick = () => { console.log('두번째 이벤트에요'); }
+// 이벤트가 덮어씌워진것을 알 수 있음
+console.dir(RecordBtn) // Button#jsRecordBtn > { onclick: () => console.log('두번째 이벤트에요') }
+RecordBtn.onclick = null;
+console.dir(RecordBtn) // Button#jsRecordBtn > { onclick: null }
+```
+
+### dataavailable : Event
+mediaRecorder는 전체 파일을 한 번에 저장하게 되어있으므로, recoding이 종료되었을 때 전체 파일을 얻을 수 있다.
+
+```javascript
+const startRecording = () => {
+  const videoRecorder = new MediaRecorder(streamObject);
+  videoRecorder.start();
+  videoRecorder.addEventListener('dataavailable', handleVideoData)
+  setTimeout(() => videoRecorder.stop(), 5000)
+  // stop 시 dataavailable 이벤트가 실행되어 handleVideoData에서 BlobEvent를 준다.
+}
+
+const handleVideoData = (event) => {
+    console.log(event) // Blob Event
+}
+```
+
+### start(timeslice: miliseconds 단위)
+
+start에 `milisecond` 단위로 인자를 주면, 해당 duration마다 계속 실행되면서 덩어리 단위로 recording한다.
+
+```javascript
+const startRecording = () => {
+    const videoRecorder = new MediaRecorder(streamObject);
+    videoRecorder.addEventListener('dataavailable', handleVideoData)
+    videoRecorder.start(1000);
+}
+
+const handleVideoData = (event) => {
+    console.log(event.data, 'is showed every seconds')
+    // Blob(234710) {size: 234710, type: 'video/x-matroska; codecs=avc1,opus'} // 1초 후
+    // Blob(234710) {size: 234710, type: 'video/x-matroska; codecs=avc1,opus'} // 2초 후
+}
+```
+
+## 생성된 파일을 다운로드 하는법
+```javascript
+const handleVideoData = event => {
+    const {
+        data: videoFile
+    } = event;
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(videoFile); // (*)
+    link.download = 'recorded.webm'; // (**)
+    document.body.appendChild(link);
+    link.click(); // (***)
+}
+```
+
+#### (*) `URL.createObjectURL(object)`  
+  - 주어진 객체를 가리키는 URL을 DOMString으로 반환합니다.  
+(Object의 종류 : File, Blob, MediaSource 객체)  
+```javascript
+const objectURL = URL.createObjectURL(object)
+```
+#### (**)  
+  - `link.download` : 다운로드할 이름 지정  
+  - `webm` : Google의 오픈소스 동영상 포맷  
+#### (***) `facking click`
+  - 조작된 클릭을 이용하여 링크 클릭 및 파일을 다운로드하도록 한다.
+
+
+## 에러 처리
+비디오를 녹화하고 나서 recorded.webm으로 저장했을 때 소리는 들리지만 화면이 보이지 않았다.  
+[여기](https://developers.google.com/web/updates/2016/01/mediarecorder)에서 알려준대로 `MediaRecorder` 생성자를 사용할 때 `option`을 사용하여 `MIMEType`을 설정해주니 해결되었다.
+
+```javascript
+// 기존 코드 : videoRecorder = new MediaRecorder(streamObject);
+var options = {
+    mimeType: 'video/webm;codecs=vp9'
+};
+videoRecorder = new MediaRecorder(streamObject, options);
+```
