feat: add api that increase video views

--- a/Note/3. MONGODB.md
+++ b/Note/3. MONGODB.md
@@ -19,3 +19,98 @@ mongo // 몽고 데이터베이스 접속
 > exit
 ```
 
+### DB 설정
+(*)  
+    - `required` : 해당 내용이 없으면 보여질 에러메시지  
+    - `default` : 기본값 설정 가능  
+    - `mongoose.Schema.Types.ObjectId` : 다른 collection(ref: 'User')의 값과 연결할 수 있다.
+
+```javascript
+// db.js
+import mongoose from 'mongoose'
+import dotenv from 'dotenv' // keep secure db info
+dotenv.config(); // 자동으로 .env파일안에 있는 함수들을 불러옴
+
+mongoose.connect(
+    process.env.MONGO_URL, // (urls:string, ..localhost:포트번호/데이터베이스명, where is your database stored)
+    {
+        useNewUrlParser: true,
+        useFindAndModify: false,
+        useUnifiedTopology: true
+    }
+);
+
+const db = mongoose.connection;
+
+const handleOpen = () => console.log(`✅  Connected to DB`)
+const handleError = (err) => console.log(`❌  Error on db connection: ${err}`)
+
+db.once('open', handleOpen)
+db.on('error', handleError)
+
+// app.js
+import mongoose from 'mongoose';
+app.use(session({
+    secret: process.env.COOKIE_SECRET,
+    resave: true,
+    saveUninitialized: false,
+    store: new CookieStore({
+        mongooseConnection: mongoose.connection
+    })
+}))
+
+// modes/Video.js
+import mongoose from 'mongoose';
+
+const VideoSchema = new mongoose.Schema({
+    fileUrl: {
+        type: String,
+        required: 'File URL is required' // (*)
+    },
+    description: String,
+    createdAt: {
+        type: Date,
+        default: Date.now
+    },
+    creator: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "User"
+    }
+});
+const model = mongoose.model('Video', VideoSchema)
+export default model;
+```
+
+설정 후 아래와 같이 controllers에서 video collection 검색 및 수정이 가능하다.
+
+```javascript
+// controllers/videoControllers.js
+import Video from "../models/Video";
+export const postRegisterView = async (req, res) => {
+    /**
+        * Saves this document.
+        * @param options options optional options
+        * @param options.safe overrides schema's safe option
+        * @param options.validateBeforeSave set to false to save without validating.
+        * @param fn optional callback
+        */
+    save(options?: SaveOptions, fn?: (err: any, product: this) => void): Promise<this>;
+    
+const video = await Video.findById(req.params.id)
+    video.views += 1;
+    video.save();
+}
+
+// and also use like this...
+await Video.create({
+    fileUrl: path,
+    title,
+    description,
+    creator: req.user.id
+});
+await Video.find({}).sort({_id: -1});
+// findById: videoModel에서 해당 id로 검색해서
+// populate: 그 video를 만든 creator 객체를 통째로 가져온다.
+// (video model의 creator는 mongoose.Schema.Types.ObjectId로 User테이블과 연결되어있음)
+await Video.findById(id).populate('creator');
+``` 
