--- a/Note/3. MONGODB.md
+++ b/Note/3. MONGODB.md
@@ -1,6 +1,11 @@
 🔥 MONGO DB
 ===
 
+**DEFFERENCE BETWEEN MONGO AND MONGOOSE**
+`MONGO` : database
+`MONGOOSE` : How we talk to the database using js
+`SCHEMA` : an object that tells mongoose the spape of the data that we will save
+
 **설치** : 
 커뮤니티 서버 다운 ([다운로드 링크](https://www.mongodb.com/try/download/community))
 
