docs: MONGODB 내용 추가

--- a/Note/3. MONGODB.md
+++ b/Note/3. MONGODB.md
@@ -86,6 +86,19 @@ const model = mongoose.model('Video', VideoSchema)
 export default model;
 ```
 
+### Object ID
+- mysql에서 테이블을 생성할때 id에 autoincrement를 주는 것과 다르게, mongodb는 클라이언트에서 object id를 만든다.  
+- [이에 관한 내용 : ObjectID에 대하여](https://blog.seulgi.kim/2014/09/mongodb-objectid.html)
+    > ObjectId는 같은 document 내에서 유일함이 보장되는 12 byte binary data다. MongoDB와 같은 분산 database에서는 key를 서버에서 만들지 않고 클라이언트에서 만든다. 그 이유는 MongoDB가 query를 날릴 shard를 결정하는 방식을 보면 알 수 있다.
+    MongoDB는 자신이 필요한 shard에게만 query를 요청한다. 다시 말해서 client에 해당하는 mongos2)가 config server의 data를 토대로 어떤 shard가 어느 범위의 값을 가졌는지를 저장하고 있다가 query를 요청할 때 자신이 필요로 하는 shard에게만 요청한다.
+- 그렇지만 명시적으로 Schema 생성 시 id를 선언해주고자 하는경우에는 아래와 같이 추가할 수 있다.
+
+```javascript
+const VideoSchema = new mongoose.Schema({
+    id: mongoose.Schema.Types.ObjectId,
+})
+```
+
 설정 후 아래와 같이 controllers에서 video collection 검색 및 수정이 가능하다.
 
 ```javascript
